# rinja

./: .gitmodules  .readthedocs.yaml  .rustfmt.toml  Cargo.toml  README.md  _typos.toml  deny.toml
askama/: .rustfmt.toml  Cargo.toml  tomlfmt.toml
askama_derive/: Cargo.toml  README.md
askama_derive_standalone/: Cargo.toml  README.md  _typos.toml  deny.toml  src  templates
askama_derive_standalone/benches/: derive-template.rs
askama_parser/: Cargo.toml  (+1 more)
bench-build/: Cargo.toml  README.md  run.sh
bench-build/src/: main.rs
bench-build/templates/: greeting.html  hello_world.html
examples/actix-web-app/: Cargo.toml  README.md  tomlfmt.toml
examples/actix-web-app/src/: main.rs
examples/actix-web-app/templates/: 404.html  _layout.html  error.html  greet.html  index.html
examples/poem-app/: Cargo.toml  README.md  _typos.toml
examples/poem-app/src/: main.rs
examples/poem-app/templates/: error.html
examples/rocket-app/: Cargo.toml  README.md
examples/rocket-app/src/: main.rs
examples/rocket-app/templates/: _layout.html
examples/test-examples/: .gitignore  README.md  pyproject.toml  test.sh
examples/test-examples/tests/: common.py  test_actix-web.py  test_axum.py  test_poem.py  test_rocket.py  test_salvo.py  test_warp.py
examples/test-examples/tests/expected/: .gitattributes  404.html  en_greet-me-rinja.html  en_index-rinja.html  en_index.html
examples/test-examples/tests/expected/actix-web/: en_greet-me-rinja.html  en_greet-me.html  en_index-rinja.html  en_index.html  no_such_path.html
examples/test-examples/tests/expected/axum/: en_greet-me.html
examples/test-examples/tests/expected/poem/: en_greet-me.html
examples/test-examples/tests/expected/rocket/: en_greet-me.html
examples/test-examples/tests/expected/salvo/: en_greet-me.html
fuzz_parser/: Cargo.toml  README.md
fuzz_parser/fuzz/: .gitignore  Cargo.toml
fuzz_parser/fuzz/src/: main.rs
fuzz_parser/src/: lib.rs  main.rs
fuzzing/fuzz/: Cargo.toml
fuzzing/fuzz/artifacts/: .gitattributes
fuzzing/fuzz/fuzz_targets/: all.rs  filters.rs  html.rs  parser.rs
fuzzing/fuzz/src/: all.rs  ascii_str.rs  filters.rs  lib.rs  parser.rs
fuzzing/fuzz/src/html/: html.rs  mod.rs
rinja/: Cargo.toml
rinja/benches/: escape.rs  strings.inc  to-json.rs
rinja/src/: ascii_str.rs  error.rs  helpers.rs  html.rs  lib.rs  values.rs
rinja/src/dynamic/: child.rs  mod.rs  parent.rs
rinja/src/filters/: alloc.rs  builtin.rs  escape.rs  humansize.rs  json.rs  mod.rs  num_traits.rs  urlencode.rs
rinja_actix/: Cargo.toml  README.md
rinja_actix/src/: lib.rs
rinja_actix/tests/: basic.rs
rinja_axum/: Cargo.toml  README.md
rinja_axum/src/: lib.rs
rinja_axum/tests/: basic.rs
rinja_derive/: Cargo.toml  README.md
rinja_derive/src/: config.rs  generator.rs  heritage.rs  html.rs  input.rs  integration.rs  lib.rs  tests.rs
rinja_derive/src/generator/: expr.rs  filters.rs  node.rs
rinja_derive_standalone/: Cargo.toml  README.md
rinja_derive_standalone/benches/: derive-template.rs  filters.rs
rinja_escape/: Cargo.toml  README.md
rinja_escape/benches/: all.rs
rinja_escape/src/: lib.rs
rinja_parser/: Cargo.toml  README.md
rinja_parser/benches/: from_str.rs
rinja_parser/fuzz/: Cargo.toml
rinja_parser/fuzz/fuzz_targets/: fuzz_parser.rs
rinja_parser/src/: ascii_str.rs  expr.rs  lib.rs  memchr_splitter.rs  node.rs  target.rs  tests.rs
rinja_rocket/: Cargo.toml  README.md
rinja_rocket/src/: lib.rs
rinja_rocket/tests/: basic.rs
rinja_warp/: Cargo.toml  README.md
rinja_warp/src/: lib.rs
rinja_warp/tests/: warp.rs
testing/: Cargo.toml  build.rs  delim-clash.toml  delim-too-short.toml  issue-128-2.toml  issue-128.toml  operator-paren-config.toml  operator-plus-config.toml
testing-alloc/: Cargo.toml
testing-alloc/tests/: hello-world.rs
testing-renamed/: Cargo.toml
testing-renamed/tests/: hello-world.rs
testing/benches/: all.rs  normalize_identifier.rs
testing/jinja2-assumptions/: .gitignore  README.md  pyproject.toml
testing/jinja2-assumptions/tests/: test_block_in_include_partial.py
testing/templates/: allow-whitespaces.html  base-decl.txt  block_in_include_base.html  block_in_include_extended.html  block_in_include_partial.html  filter-recursion.html  foo.askama  foo.html.askama  foo.html.rinja  foo.rinja  fuzzed-recursion-mul-deref.txt  html-base.html  include-base.html  latex-file.tex  macro-recursion-1.html  macro-recursion-2.html  macro-recursion-3.html  no-block-with-base-template.txt  no-block-with-include-times-2.txt  no-block-with-include.txt  operators.html  precedence.html  transclude-there.html  use-var.txt
testing/templates/leaf-templates/: includer.html
testing/tests/: block_fragments.rs  blocks.rs  calls.rs  coerce.rs  enum.rs  ext.rs  extend.rs  filter_block.rs  filters.rs  gen_loop_else.py  gen_ws_tests.py  hello.rs  if.rs  if_let.rs  ifdef.rs  include.rs  inheritance.rs  is_defined.rs  let.rs  let_destructoring.rs  literal.rs  loop_else.rs  loops.rs  macro.rs  matches.rs  methods.rs  no_implicit_prelude.rs  operators.rs  ref_deref.rs  render_in_place.rs  rest_pattern.rs  rust_macro.rs  simple.rs  size_hint.rs  source-in-code.rs  try.rs  tuple.rs  ui.rs  values.rs  vars.rs  (+2 more)
testing/tests/ui/: ambiguous-ws-raw.rs  ambiguous-ws-raw.stderr  as-primitive-type.rs  as-primitive-type.stderr  askama-block.rs  askama-block.stderr  assign-to-askama.rs  assign-to-askama.stderr  assign-to-rinja.rs  assign-to-rinja.stderr  block_and_vars.rs  block_in_filter_block.rs  block_in_filter_block.stderr  blocks_below_top_level.rs  blocks_below_top_level.stderr  break_outside_of_loop.rs  break_outside_of_loop.stderr  broken-config.rs  broken-config.stderr  char_literal.rs  char_literal.stderr  concat.rs  concat.stderr  cycle.rs  cycle.stderr  cycle2.rs  cycle2.stderr  duplicated_template_attribute.rs  duplicated_template_attribute.stderr  empty-match.rs  empty-match.stderr  end-block.rs  end-block.stderr  enum.rs  enum.stderr  error_file_path.rs  error_file_path.stderr  escape-filter-invalid-kind.rs  escape-filter-invalid-kind.stderr  excessive_nesting.rs  (+85 more)
(+71 files in other folders)
