[package]
name = "askama_derive_standalone"
version = "0.3.5"
description = "Procedural macro package for Askama"
homepage = "https://github.com/askama-rs/askama"
repository = "https://github.com/askama-rs/askama"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.81"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[[bench]]
name = "derive-template"
harness = false
required-features = ["__standalone"]

[dependencies]
parser = { package = "askama_parser", version = "=0.3.5", path = "../askama_parser" }

basic-toml = { version = "0.1.1", optional = true }
pulldown-cmark = { version = "0.12.0", optional = true, default-features = false }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

memchr = "2"
quote = { version = "1", default-features = false }
rustc-hash = "2.0.0"
syn = { version = "2.0.3", default-features = false, features = ["clone-impls", "derive", "parsing", "printing"] }

# in `askama_derive_standalone` we opt out of the default features, because we need no native `proc-macro` support
proc-macro2 = { version = "1", default-features = false }

[dev-dependencies]
console = "0.15.8"
criterion = "0.5"
prettyplease = "0.2.20"
similar = "2.6.0"
syn = { version = "2.0.3", features = ["full"] }

[features]
default = ["__standalone"]
__standalone = []

alloc = []
blocks = ["syn/full"]
code-in-doc = ["dep:pulldown-cmark"]
config = ["dep:basic-toml", "dep:serde", "dep:serde_derive", "parser/config"]
derive = []
serde_json = []
std = ["alloc"]
urlencode = []

[lints.rust]
# Used in `askama_derive` which uses the same source folder, but is a proc-macro.
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("alloc"))'] }

[workspace]
members = ["."]
