[package]
name = "bench-build"
version = "0.3.5"
authors = ["askama-rs developers"]
edition = "2021"
rust-version = "1.81"
publish = false

[dependencies]
askama = { path = "../askama", version = "0.3.5", default-features = false, features = ["std"] }
askama_derive = { path = "../askama_derive", version = "0.3.5", features = ["std"] }

[features]
default = []
derive = ["askama/derive"]

[workspace]
members = ["."]
