[package]
name = "rinja"
version = "0.3.5"
description = "Type-safe, compiled Jinja-like templates for Rust"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://rinja.readthedocs.io/"
repository = "https://github.com/rinja-rs/rinja"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81"

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[[bench]]
name = "to-json"
harness = false
required-features = ["serde_json"]

[[bench]]
name = "escape"
harness = false

[dependencies]
rinja_derive = { version = "=0.3.5", path = "../rinja_derive" }

percent-encoding = { version = "2.1.0", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
serde_json = { version = "1.0", optional = true, default-features = false, features = [] }

itoa = "1.0.11"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.5"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["config", "std", "urlencode"]
full = ["default", "code-in-doc", "serde_json"]

alloc = [
    "rinja_derive/alloc",
    "serde?/alloc",
    "serde_json?/alloc",
    "percent-encoding?/alloc"
]
code-in-doc = ["rinja_derive/code-in-doc"]
config = ["rinja_derive/config"]
serde_json = ["rinja_derive/serde_json", "dep:serde", "dep:serde_json"]
std = [
    "alloc",
    "rinja_derive/std",
    "serde?/std",
    "serde_json?/std",
    "percent-encoding?/std"
]
urlencode = ["rinja_derive/urlencode", "dep:percent-encoding"]
