[package]
name = "rinja_derive"
version = "0.3.0"
description = "Procedural macro package for Rinja"
homepage = "https://github.com/rinja-rs/rinja"
repository = "https://github.com/rinja-rs/rinja"
license = "MIT/Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2021"
rust-version = "1.71"

[lib]
proc-macro = true

[features]
config = ["dep:serde", "dep:basic-toml"]
humansize = []
urlencode = []
serde_json = []
num-traits = []
with-actix-web = []
with-axum = []
with-rocket = []
with-warp = []

[dependencies]
parser = { package = "rinja_parser", version = "=0.3.0", path = "../rinja_parser" }

basic-toml = { version = "0.1.1", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

memchr = "2"
mime = "0.3"
mime_guess = "2"
once_map = "0.4.18"
proc-macro2 = "1"
quote = "1"
syn = "2.0.3"

[dev-dependencies]
console = "0.15.8"
prettyplease = "0.2.20"
similar = "2.6.0"
syn = { version = "2.0.3", features = ["full"] }

[lints.rust]
# Used in `rinja_derive_standalone` which uses the same source folder, but is not a proc-macro.
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("__standalone"))'] }
