[package]
name = "rinja_derive_standalone"
version = "0.2.0"
description = "Procedural macro package for Rinja"
homepage = "https://github.com/rinja-rs/rinja"
repository = "https://github.com/rinja-rs/rinja"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.71"
publish = false

[features]
default = ["__standalone"]
__standalone = []
config = ["dep:serde", "dep:basic-toml"]
humansize = []
urlencode = []
serde_json = []
num-traits = []
with-actix-web = []
with-axum = []
with-rocket = []
with-warp = []

[dependencies]
parser = { package = "rinja_parser", version = "0.2.0", path = "../rinja_parser" }
basic-toml = { version = "0.1.1", optional = true }
mime = "0.3"
mime_guess = "2"
once_map = "0.4.18"
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0", optional = true, features = ["derive"] }
syn = "2"

[dev-dependencies]
criterion = "0.5"

console = "0.15.8"
similar = "2.6.0"
prettyplease = "0.2.20"
syn = { version = "2.0.3", features = ["full"] }

[[bench]]
name = "derive-template"
harness = false
required-features = ["__standalone"]

[workspace]
members = ["."]
