[workspace]
members = ["."]

[package]
name = "rinja_derive_standalone"
version = "0.3.4"
description = "Procedural macro package for Rinja"
homepage = "https://github.com/rinja-rs/rinja"
repository = "https://github.com/rinja-rs/rinja"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.71"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[features]
default = ["__standalone"]
__standalone = []

code-in-doc = ["dep:pulldown-cmark"]
config = ["dep:serde", "dep:basic-toml", "parser/config"]
humansize = []
urlencode = []
serde_json = []
num-traits = []
with-actix-web = []
with-axum = []
with-rocket = []
with-warp = []

[dependencies]
parser = { package = "rinja_parser", version = "=0.3.4", path = "../rinja_parser" }

basic-toml = { version = "0.1.1", optional = true }
pulldown-cmark = { version = "0.12.0", optional = true, default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }

memchr = "2"
mime = "0.3"
mime_guess = "2"
once_map = { version = "0.4.18", default-features = false, features = ["std"] }
proc-macro2 = "1"
quote = "1"
rustc-hash = "2.0.0"
syn = "2.0.3"

[dev-dependencies]
console = "0.15.8"
criterion = "0.5"
prettyplease = "0.2.20"
similar = "2.6.0"
syn = { version = "2.0.3", features = ["full"] }

[[bench]]
name = "derive-template"
harness = false
required-features = ["__standalone"]
