
[package]
name = "rinja_derive_standalone"
version = "0.3.5"
description = "Procedural macro package for Rinja"
homepage = "https://github.com/rinja-rs/rinja"
repository = "https://github.com/rinja-rs/rinja"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.81"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[[bench]]
name = "derive-template"
harness = false
required-features = ["__standalone"]

[[bench]]
name = "filters"
harness = false
required-features = ["__standalone"]

[dependencies]
parser = { package = "rinja_parser", version = "=0.3.5", path = "../rinja_parser" }

basic-toml = { version = "0.1.1", optional = true }
pulldown-cmark = { version = "0.12.0", optional = true, default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }

memchr = "2"
quote = { version = "1", default-features = false }
rustc-hash = "2.0.0"
syn = { version = "2.0.3", default-features = false, features = ["clone-impls", "derive", "parsing", "printing"] }

# in `rinja_derive_standalone` we opt out of the default features, because we need no native `proc-macro` support
proc-macro2 = { version = "1", default-features = false }

[dev-dependencies]
console = "0.15.8"
criterion = "0.5"
prettyplease = "0.2.20"
similar = "2.6.0"
syn = { version = "2.0.3", features = ["full"] }

[features]
default = ["__standalone"]
__standalone = []

code-in-doc = ["dep:pulldown-cmark"]
config = ["dep:serde", "dep:basic-toml", "parser/config"]
urlencode = []
serde_json = []

[lints.rust]
# Used in `rinja_derive` which uses the same source folder, but is a proc-macro.
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("alloc"))'] }

[workspace]
members = ["."]
