[package]
name = "rinja_escape"
version = "0.11.0"
description = "Optimized HTML escaping code, extracted from Rinja"
documentation = "https://docs.rs/rinja_escape"
keywords = ["html", "escaping"]
homepage = "https://github.com/rinja-rs/rinja"
repository = "https://github.com/rinja-rs/rinja"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "all"
harness = false
