[package]
name = "rinja_parser"
version = "0.3.5"
description = "Parser for Rinja templates"
documentation = "https://docs.rs/rinja"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/rinja-rs/rinja"
repository = "https://github.com/rinja-rs/rinja"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[[bench]]
name = "from_str"
harness = false

[dependencies]
memchr = "2"
serde = { version = "1.0", optional = true, features = ["derive"] }
winnow = "0.6"

[dev-dependencies]
criterion = "0.5"

[features]
config = ["dep:serde"]
