[package]
name = "rinja_parser"
version = "0.4.0"
description = "New versions of `rinja` will be released under the name `askama`."
homepage = "https://crates.io/crates/askama"
repository = "https://github.com/rinja-rs/rinja"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]
