[workspace]
members = ["."]

[package]
name = "rinja_rocket"
version = "0.3.6"
description = "Rocket integration for Rinja templates"
documentation = "https://docs.rs/rinja"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/rinja-rs/rinja"
repository = "https://github.com/rinja-rs/rinja"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.71"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[features]
default = ["rinja/default"]
full = ["rinja/full"]
code-in-doc = ["rinja/code-in-doc"]
config = ["rinja/config"]
humansize = ["rinja/humansize"]
serde_json = ["rinja/serde_json"]
urlencode = ["rinja/urlencode"]

[dependencies]
rinja = { version = "0.3.6", path = "../rinja", default-features = false, features = ["with-rocket"] }

rocket = { version = "0.5", default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
