[package]
name = "rinja_warp"
version = "0.2.0"
description = "Warp integration for Rinja templates"
documentation = "https://docs.rs/rinja"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://github.com/rinja-rs/rinja"
repository = "https://github.com/rinja-rs/rinja"
license = "MIT OR Apache-2.0"
workspace = ".."
readme = "README.md"
edition = "2021"
rust-version = "1.71"

[dependencies]
rinja = { version = "0.2.0", path = "../rinja", default-features = false, features = ["with-warp"] }
warp = { version = "0.3", default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }

[features]
default = ["rinja/default"]
config = ["rinja/config"]
humansize = ["rinja/humansize"]
num-traits = ["rinja/num-traits"]
serde_json = ["rinja/serde_json"]
urlencode = ["rinja/urlencode"]
