[package]
name = "askama_testing-alloc"
version = "0.3.5"
authors = ["askama-rs developers"]
edition = "2021"
rust-version = "1.81"
publish = false

[dev-dependencies]
askama = { path = "../askama", version = "0.3.5", default-features = false, features = ["alloc", "derive"] }

assert_matches = "1.5.0"
