[package]
name = "rinja_testing"
version = "0.3.5"
authors = ["rinja-rs developers"]
edition = "2021"
rust-version = "1.81"
publish = false

[features]
default = ["code-in-doc", "serde_json"]
code-in-doc = ["rinja/code-in-doc"]
serde_json = ["dep:serde_json", "rinja/serde_json"]

[dependencies]
rinja = { path = "../rinja", version = "0.3.5" }

serde_json = { version = "1.0", optional = true }

# intentionally shadow the name `::core` to test if the generated code still works fine
core = { package = "intentionally-empty", version = "1.0.0" }

[dev-dependencies]
rinja = { path = "../rinja", version = "0.3.5", features = ["code-in-doc", "serde_json"] }

assert_matches = "1.5.0"
criterion = "0.5"
phf = { version = "0.11", features = ["macros" ] }
trybuild = "1.0.100"

[[bench]]
name = "all"
harness = false

[[bench]]
name = "normalize_identifier"
harness = false

[lints.rust]
# Set in `build.rs` if we are compiling in stable rust, used by `ui.rs`
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(RUN_UI_TESTS)'] }
