[package]
name = "askama_testing"
version = "0.3.5"
authors = ["askama-rs developers"]
edition = "2021"
rust-version = "1.81"
publish = false

[[bench]]
name = "all"
harness = false

[[bench]]
name = "normalize_identifier"
harness = false

[dependencies]
askama = { path = "../askama", version = "0.3.5" }

serde_json = { version = "1.0", optional = true }

# intentionally shadow the name `::core` to test if the generated code still works fine
core = { package = "intentionally-empty", version = "1.0.0" }

[dev-dependencies]
askama = { path = "../askama", version = "0.3.5", features = ["blocks", "code-in-doc", "serde_json"] }

assert_matches = "1.5.0"
criterion = "0.5"
phf = { version = "0.11", features = ["macros" ] }
trybuild = "1.0.100"

[features]
default = ["blocks", "code-in-doc", "serde_json"]
blocks = ["askama/blocks"]
code-in-doc = ["askama/code-in-doc"]
serde_json = ["dep:serde_json", "askama/serde_json"]

[lints.rust]
# Set in `build.rs` if we are compiling in stable rust, used by `ui.rs`
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(RUN_UI_TESTS)'] }
