[package]
name = "actix-web-app"
version = "0.3.5"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# This is an example application that uses both askama as template engine,
# and rocket as your web-framework.
[dependencies]
askama = { version = "0.3.5", path = "../../askama" }
rocket = "0.5.1"

# strum is used to parse and serialize information between web requests,
# e.g. to share the selected display language.
strum = { version = "0.26.3", features = ["derive"] }

# These depenendies are simply used for a better user experience, having access logs in the
# console, and error messages if anything goes wrong, e.g. if the port is already in use.
displaydoc = "0.2.5"
env_logger = "0.11.6"
pretty-error-debug = "0.3.1"
thiserror = "2.0.11"

# In a real application you would not need this section. It is only used in here, so that this
# example can have a more lenient MSRV (minimum supported rust version) than askama as a whole.
[workspace]
members = ["."]
