[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]
cargo-fuzz = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[dependencies]
rinja = { path = "../../rinja" }
rinja_parser = { path = "../../rinja_parser" }

arbitrary = { version = "1.3.2", features = ["derive"] }
html-escape = "0.2.13"
libfuzzer-sys = "0.4.7"
thiserror = "1.0.63"

[[bin]]
name = "all"
path = "fuzz_targets/all.rs"
test = false
doc = false

[[bin]]
name = "filters"
path = "fuzz_targets/filters.rs"
test = false
doc = false

[[bin]]
name = "html"
path = "fuzz_targets/html.rs"
test = false
doc = false

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
