[project]
name = "jinja2-assumptions"
version = "0.1.0"
description = "This folder contains tests to ensure that askama work the same a Jinja2."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2 >= 3.1.5, == 3.*",
    "pytest >= 8.3.4, == 8.*",
]
license.text = "MIT OR Apache-2.0"
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["setuptools"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["."]
